<resources>
    <string name="app_name">Healt News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="news">News</string>
    <string name="save">Save</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tgl">tgl</string>
    <string name="desk">Health news is news with the theme of health in the environment, humans, animals, interesting information about health and tips for maintaining health.</string>
    <string name="confirm_password">Confirm Password</string>
</resources>